Updates to Selenium Remote Support